@@ -237,7 +237,7 @@ do_options() {
 	while (( $f < $OP_MAX_COUNTERS )); do
 		if [[ ${#CTR_EVENT[$f]} != 0 ]]; then
 			CTR_EVENT_VAL[$f]=`op_help ${CTR_EVENT[$f]}`
-			if [ -z "${CTR_EVENT_VAL[$f]}" -a ! -z "${CTR_EVENT[$f]}" ]; then
+			if [ "$?" != 0 ] || [ -z "${CTR_EVENT_VAL[$f]}" -a ! -z "${CTR_EVENT[$f]}" ]; then
 				echo "Unknown event \"${CTR_EVENT[$f]}\"" >&2
 				exit 1
 			fi
