@@ -863,7 +863,10 @@ int main(int argc, char *argv[])
 				if (!strcmp(op_events[j].name, argv[i]) && 
 				    (op_events[j].cpu_mask & cpu_type_mask)) {
 					printf("%d\n", op_events[j].val);
+					return 0;
 				}
+			fprintf(stderr, "No such event \"%s\"\n", argv[i]);
+			return 1;
 			}
 		return 0;
 		}
